Fixed some issues with prompt z-index and contact dialog.

--- a/src/modules/components/prompt/canvas/prompt-canvas-style.scss
+++ b/src/modules/components/prompt/canvas/prompt-canvas-style.scss
@@ -23,7 +23,7 @@ gelato-component[data-name="prompt-canvas"] {
 
   #prompt-canvas-element {
     position: absolute;
-    z-index: 9999;
+    z-index: 5000;
   }
 
   #prompt-canvas-message {
